// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRowEnd renders 0 1`] = `
Array [
  .c0 {
  grid-row-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders function 1`] = `
Array [
  .c0 {
  grid-row-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-row-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders negative number 1`] = `
Array [
  .c0 {
  grid-row-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-row-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-row-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-row-end: July;
  }
}

@media April {
  .c0 {
    grid-row-end: August;
  }
}

@media January {
  .c0 {
    grid-row-end: September;
  }
}

@media April {
  .c0 {
    grid-row-end: November;
  }
}

@media June {
  .c0 {
    grid-row-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-row-end: July;
  }
}

@media April {
  .c0 {
    grid-row-end: August;
  }
}

@media January {
  .c0 {
    grid-row-end: September;
  }
}

@media April {
  .c0 {
    grid-row-end: November;
  }
}

@media June {
  .c0 {
    grid-row-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-end: January;
  }
}

@media April {
  .c0 {
    grid-row-end: December;
  }
}

@media January {
  .c0 {
    grid-row-end: April;
  }
}

@media April {
  .c0 {
    grid-row-end: May;
  }
}

@media June {
  .c0 {
    grid-row-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-end: January;
  }
}

@media April {
  .c0 {
    grid-row-end: December;
  }
}

@media January {
  .c0 {
    grid-row-end: April;
  }
}

@media April {
  .c0 {
    grid-row-end: May;
  }
}

@media June {
  .c0 {
    grid-row-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders postitive number 1`] = `
Array [
  .c0 {
  grid-row-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders string 1`] = `
Array [
  .c0 {
  grid-row-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowEnd renders valid theme path 1`] = `
Array [
  .c0 {
  grid-row-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
